# trading-agent-lab

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  mypy.ini  pyproject.toml
.github/workflows/: ci.yml
config/: base.yaml
config/agents/: codex_seed.yaml  rsi_v2.yaml
config/live/: alpaca_paper.yaml
scripts/: paper_smoke.sh  run_orchestrator.sh
src/tal/: achievements.py  achievements_badges.py  cli.py
src/tal/agents/: __init__.py  registry.py  spec.py
src/tal/backtest/: engine.py
src/tal/data/: bars.py  ingest.py
src/tal/evaluation/: leaderboard.py  metrics.py
src/tal/evolution/: tuner.py
tests/: conftest.py  test_achievements_badges.py  test_achievements_cli.py  test_achievements_profit.py  test_achievements_status_cli.py  test_achievements_trade_notional.py  test_after_hours_env_live.py  test_agents_registry.py  test_alpaca_adapter.py  test_alpaca_after_hours.py  test_alpaca_client_urls.py  test_alpaca_url_selection.py  test_backtest_engine.py  test_badge_emojis.py  test_db_provenance.py  test_doctor_after_hours.py  test_doctor_offline.py  test_dotenv_autoload.py  test_env_overrides.py  test_leaderboard.py  test_league_db_routing.py  test_league_live_once.py  test_league_nightly_alloc.py  test_live_integration_achievements.py  test_live_loop_and_flatten.py  test_live_pricing_consistency.py  test_live_signal_routing.py  test_live_sim.py  test_metrics.py  test_orders_and_ledger_tail.py  test_orders_persistence.py  test_persistence_eval.py  test_real_gate.py  test_sanitization_inf.py
(+16 files in other folders)
